ClayCSS: (Fixes #1105, Fixes #1147) Subnav Tbar Primary should support labels, break to new line, have disabled state, and `.component-link` color should have more contrast
ClayCSS: (#1105) Mixin `clay-label-size` added options to configure `margin-bottom`, `margin-left`, `margin-right`, `margin-top`

ClayCSS: (#1105) Mixin `clay-tbar-variant` added options to configure `$padding-x`, `$padding-y`, `$item-justify-content`, `$btn-monospaced-margin-x`, `$btn-monospaced-margin-y`, `$link-monospaced-margin-x`, `$link-monospaced-margin-y`, `$label-size`

ClayCSS (#1105) Tbar added option to break to new lines with `.tbar-nav-shrink`, `.tbar-nav-wrap`, `.subnav-tbar-inline-xs-down`, `.subnav-tbar-inline-sm-down`, `.subnav-tbar-inline-md-down`, `.subnav-tbar-inline-lg-down`, `.subnav-tbar-inline-xl-down`

ClayCSS: (#1105) Label disabled `.close` hover state should look the same

ClayCSS: (#1105) Mixin `clay-link` add option to configure `disabled-text-decoration`

ClayCSS: (#1105) New mixin `clay-label-variant` for creating custom label colors

ClayCSS: (#1147) Subnav Tbar Primary changed `.component-link` color to have more contrast and added `.subnav-tbar-primary.subnav-tbar-disabled` colors

ClayCSS: (#1105) Tbar renamed `.subnav-tbar-inline-*-down` to `.tbar-inline-*-down`

--- a/packages/clay-css/src/scss/components/_tbar.scss
+++ b/packages/clay-css/src/scss/components/_tbar.scss
@@ -8,18 +8,35 @@
 }
 
 .tbar-nav {
-	@extend %autofit-row;
-
+	display: flex;
+	flex-grow: 1;
+	flex-shrink: 1;
+	flex-wrap: nowrap;
+	list-style: none;
 	margin-bottom: 0;
+	min-width: 3.125rem;
+	padding-left: 0;
+	word-wrap: break-word;
 
 	> .tbar-item {
 		justify-content: center;
 	}
 }
 
+.tbar-nav-shrink {
+	flex-grow: 0;
+	flex-shrink: 0;
+	width: auto;
+}
+
+.tbar-nav-wrap {
+	flex-wrap: wrap;
+}
+
 .tbar-item {
 	@extend %autofit-col;
 
+	max-width: 100%;
 	padding-bottom: $tbar-item-padding-y;
 	padding-left: $tbar-item-padding-x;
 	padding-right: $tbar-item-padding-x;
@@ -44,6 +61,10 @@
 	@extend %autofit-section;
 }
 
+.tbar-link {
+	display: inline-block;
+}
+
 .tbar-btn-monospaced,
 .tbar-link-monospaced {
 	align-items: center;
@@ -58,6 +79,28 @@
 	.lexicon-icon {
 		margin-top: 0;
 	}
+}
+
+// Tbar Inline {xs|sm|md|lg|xl} Down
+
+.tbar-inline-xs-down {
+	@include clay-tbar-inline-down($tbar-inline-xs-down);
+}
+
+.tbar-inline-sm-down {
+	@include clay-tbar-inline-down($tbar-inline-sm-down);
+}
+
+.tbar-inline-md-down {
+	@include clay-tbar-inline-down($tbar-inline-md-down);
+}
+
+.tbar-inline-lg-down {
+	@include clay-tbar-inline-down($tbar-inline-lg-down);
+}
+
+.tbar-inline-xl-down {
+	@include clay-tbar-inline-down($tbar-inline-xl-down);
 }
 
 // Component Tbar
@@ -82,8 +125,14 @@
 	@include clay-tbar-variant($subnav-tbar);
 }
 
+// Subnav Tbar Variants
+
 .subnav-tbar-primary {
 	@include clay-tbar-variant($subnav-tbar-primary);
+
+	&.subnav-tbar-disabled {
+		@include clay-tbar-variant($subnav-tbar-primary-disabled);
+	}
 }
 
 .subnav-tbar-light {
